# aggregator-contract

./: .gitignore
cosmwasm-chain/: Cargo.toml  deploy.ts  package-lock.json  package.json
cosmwasm-chain/deployments/terra/: Fri Dec 31 2021 11:30:26 GMT+0900 (Korean Standard Time)  Wed Dec 29 2021 16:37:31 GMT+0900 (Korean Standard Time)
cosmwasm-chain/libs/: cw20.ts  helper.ts
cosmwasm-chain/src/: contract.rs  cw20_multi_query.rs  lib.rs  msg.rs  static_multi_query.rs
cosmwasm-chain/test/: main.ts  query.ts  real-main.ts
evm-chain/: hardhat.config.js  package-lock.json
evm-chain/contracts/: MultiCall.sol
evm-chain/deployments/fantom/: MultiCall.json
