[package]
edition = "2018"
name = "multicall"
version = "0.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.10"
cw20 = "0.8.0"
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
serde_json = "1.0"
terra-cosmwasm = "2.2.0"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
